# server/http_config_site_other_handler.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	"github.com/evcc-io/evcc/api/globalconfig"
+	"github.com/evcc-io/evcc/core"
 	"github.com/evcc-io/evcc/core/keys"
 	"github.com/evcc-io/evcc/server/db/settings"
 	"github.com/evcc-io/evcc/util/sponsor"
@@ -20,6 +21,23 @@ func setOptimizer(pub publisher) func(bool) error {
 
 func getOptimizer() bool {
 	b, _ := settings.Bool(keys.Optimizer)
+	return b
+}
+
+func setOptimizerAutomatic(pub publisher, site *core.Site) func(bool) error {
+	return func(b bool) error {
+		settings.SetBool(keys.OptimizerAutomatic, b)
+		pub(keys.OptimizerAutomatic, b)
+
+		// suggestions become control decisions, don't wait for the next slot
+		site.Optimize()
+
+		return nil
+	}
+}
+
+func getOptimizerAutomatic() bool {
+	b, _ := settings.Bool(keys.OptimizerAutomatic)
 	return b
 }
 
